Fix SideMenu overlay z-index

--- a/src/components/side-menu/side-menu.scss
+++ b/src/components/side-menu/side-menu.scss
@@ -59,6 +59,7 @@ gtx-side-menu {
 
     > .side-menu-overlay {
         position: absolute;
+        z-index: 1;
         top: 0;
         bottom: 0;
         width: 0;
